[project]
name = "daily-news"
version = "0.1.0"
description = "Daily HTML digest of new articles with LLM-named themes and a rising-topic detector."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Anselm Jeong", email = "anselmjeong@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "pymupdf>=1.24",
    "sentence-transformers>=2.7",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "hdbscan>=0.8.33",
]

[project.scripts]
daily-news = "daily_news.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daily_news"]
